# sitpath

./: README_Colab.md  colab_quickstart.sh
sitpath-eval/: Makefile  README.md  artifact_manifest.json  pyproject.toml
sitpath-eval/conf/: eval.yaml
sitpath-eval/notebooks/: 00_setup.ipynb  01_precompute_tokens.ipynb  02_train_baselines.ipynb  03_eval_metrics.ipynb  04_data_efficiency.ipynb  05_cross_scene_uncertainty.ipynb  06_controllability_ablation.ipynb  combined_notebooks.ipynb  run_all.ipynb
sitpath-eval/sitpath_eval/: __init__.py
sitpath-eval/sitpath_eval/cli/: data_cli.py  eval_cli.py  token_cli.py  train_cli.py  viz_cli.py
sitpath-eval/sitpath_eval/data/: __init__.py  eth_ucy.py  fixtures.py  raster_eth_ucy.py  utils.py
sitpath-eval/sitpath_eval/models/: __init__.py  base_model.py  coord_gru.py  coord_transformer.py  raster_gru.py  sitpath_gru.py  sitpath_transformer.py  social_lstm.py
sitpath-eval/sitpath_eval/tokens/: __init__.py  cache_utils.py  inverse_tokenizer.py  tokenizer.py  vocab.py
sitpath-eval/sitpath_eval/train/: __init__.py  callbacks.py  eval_ablation.py  eval_cross_scene.py  (+8 more)
sitpath-eval/tests/: test_data_cli.py  test_data_ethucy.py  test_eval_ablation.py  test_eval_controllability.py  test_eval_cross_scene.py  test_eval_data_efficiency.py  test_eval_metrics.py  test_eval_uncertainty.py  test_fairness.py  test_metrics.py  test_models.py  test_notebooks.py  test_raster_model.py  test_sitpath_models.py  test_smoke.py  test_social_lstm.py  test_tokenizer.py  test_train_dryrun.py  test_viz.py
sitpath-eval/tools/: update_manifest.py
(+5 files in other folders)
