[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sitpath-eval"
version = "0.1.0"
description = "Evaluation suite for the CVPR SitPath paper."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "SitPath Authors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sitpath_eval"]
