[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sitpath-eval"
version = "0.1.0"
description = "Evaluation suite for the CVPR SitPath paper."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SitPath Authors" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "pandas",
  "requests",
  "matplotlib",
  "scikit-learn",
  "hydra-core",
  "tqdm",
  "rich",
  "pytest"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sitpath_eval"]
